--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,8 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.NoActionBar">
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape">
+            android:name=".SplashActivity"
+            android:screenOrientation="landscape"
+            android:theme="@style/SplashTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -19,7 +20,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".MainActivity"
+            android:screenOrientation="landscape"/>
+        <activity
             android:name=".GameActivity"
+            android:screenOrientation="landscape" />
+        <activity
+            android:name=".Settings"
             android:screenOrientation="landscape" />
     </application>
 
