--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".Settings"
+            android:theme="@style/AppTheme"
             android:screenOrientation="landscape" />
     </application>
 
