--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,8 +27,8 @@
             android:screenOrientation="landscape" />
         <activity
             android:name=".Settings"
-            android:theme="@style/AppTheme"
-            android:screenOrientation="landscape" />
+            android:screenOrientation="landscape"
+            android:theme="@style/AppTheme" />
     </application>
 
 </manifest>
